Changed h1 to hey world

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <div id="page-wrapper">
-    <h1>My Personal Page!</h1>
+    <h1>Hey World. What's up? </h1>
   </div>
 </body>
 </html>
