--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>First Training</title>
+  <title>Kyle Russell</title>
   <!-- meta -->
   <meta charset="utf-8" />
   <meta name="description" content="Personal Site">
@@ -12,6 +12,7 @@
   <!-- styles -->
   <link rel="stylesheet" type="text/css" href="vendor/css/normalize.css">
   <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+  <link rel="stylesheet" type="text/css" href="main.css">
   <!-- scripts -->
   <script type="text/javascript" src="assets/js/app.js"></script>
   <!-- favicon -->
@@ -19,7 +20,13 @@
 </head>
 <body>
   <div id="page-wrapper">
-    <h1>Hey World. What's up? </h1>
+    <h1>Kyle Russell </h1>
+    <nav>
+      <a href="/about_me/">About Me</a>
+      <a href="">My Work</a>
+      <a href="/resume/">Resume</a>
+      <a href="/contact_me">Contact Me</a>
+    </nav>
   </div>
 </body>
 </html>
