Added main.js and nav style.

--- a/index.html
+++ b/index.html
@@ -13,20 +13,31 @@
   <link rel="stylesheet" type="text/css" href="vendor/css/normalize.css">
   <link rel="stylesheet" type="text/css" href="assets/css/main.css">
   <link rel="stylesheet" type="text/css" href="main.css">
+  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
   <!-- scripts -->
   <script type="text/javascript" src="assets/js/app.js"></script>
   <!-- favicon -->
   <link rel="icon" type="image/png" href="assets/imgs/favicon.png">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
   <div id="page-wrapper">
     <h1>Kyle Russell </h1>
-    <nav>
-      <a href="/about_me/">About Me</a>
-      <a href="">My Work</a>
-      <a href="/resume/">Resume</a>
-      <a href="/contact_me">Contact Me</a>
+    <nav class="container-fluid">
+      <div class="col-sm-3 button">
+        <h2>About Me</h2>
+      </div>
+      <div class="col-sm-3 button">
+        <h2>My Work</h2>
+      </div>
+      <div class="col-sm-3 button">
+        <h2>Resume</h2>
+      </div>
+      <div class="col-sm-3 button">
+        <h2>Contact Me</h2>
+      </div>
     </nav>
   </div>
+  <div class="about"
 </body>
 </html>
