Updated navbar to a href.

--- a/index.html
+++ b/index.html
@@ -18,24 +18,14 @@
   <script type="text/javascript" src="assets/js/app.js"></script>
   <!-- favicon -->
   <link rel="icon" type="image/png" href="assets/imgs/favicon.png">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
-  <div id="page-wrapper">
-    <h1>Kyle Russell </h1>
-    <nav class="container-fluid">
-      <div class="col-sm-3 button">
-        <h2>About Me</h2>
-      </div>
-      <div class="col-sm-3 button">
-        <h2>My Work</h2>
-      </div>
-      <div class="col-sm-3 button">
-        <h2>Resume</h2>
-      </div>
-      <div class="col-sm-3 button">
-        <h2>Contact Me</h2>
-      </div>
+  <h1>Kyle Russell</h1>
+  <nav>
+    <a href="#">About Me</a>
+    <a href="#">My Work</a>
+    <a href="#">Resume</a>
+    <a href="#">Contact Me</a>
     </nav>
   </div>
   <div class="about"
