made a footer and switched over some tags to div classes. Also updated css of links and margins

--- a/my-website/html/about_me.html
+++ b/my-website/html/about_me.html
@@ -21,15 +21,15 @@
     <link rel="icon" type="image/png" href="assets/imgs/favicon.png">
   </head>
   <body>
-    <header>
+    <div class="header">
       <h1>Kyle Russell</h1>
-    </header>
-    <nav>
-      <a href="about_me.html">About Me</a>
-      <a href="my_work.html">My Work</a>
-      <a href="resume.html">Resume</a>
-      <a href="contact_me.html">Contact Me</a>
-    </nav>
+      <nav>
+        <a href="about_me.html">About Me</a>
+        <a href="my_work.html">My Work</a>
+        <a href="resume.html">Resume</a>
+        <a href="contact_me.html">Contact Me</a>
+      </nav>
+    </div>
     <div class="section">
       <h2>About Me</h2>
       <p>Hey, I'm Kyle.</p>
@@ -38,6 +38,13 @@
       <p>My whole family is from Massachussetts so I've been raised to worship the Patriots and the Red Sox. I follow both teams religiously. #freebrady</p>
       <p>I've read way too many Star Wars books, own an original VHS box set, and have a Stormtrooper and Boba Fett. Speaking of tattoos, I have another of a coffin I spontaneously got with my girlfriend on a random Friday the 13th from a flash sheet which I paid a whoppin' $13 for.</p>
       <p>My parents live on a boat, so it's safe to say I enjoy spending any time I have away from the city on the water. I one day want to own my own boat and have the luxury of going out to sail at my leisure and hopefully be able to catch some fresh sushi while doing so!</p>
+    </div>
+    <div class="footer">
+      <nav class="my_links">
+	       <a href="https://www.linkedin.com/in/kyleedwardrussell"><b>Linkedin</b></a> |
+    	   <a href="https://github.com/zZissou">Github</a> |
+    	   <a href="https://www.facebook.com/zZissou">Facebook</a>
+	    </nav>
     </div>
   </body>
 </html>
