updated future integrations section of readme.

--- a/my-website/html/about_me.html
+++ b/my-website/html/about_me.html
@@ -30,7 +30,7 @@
         <a href="contact_me.html">Contact Me</a>
       </nav>
     </div>
-    <div class="section">
+    <div class="section about_me">
       <h2>About Me</h2>
       <p>Hey, I'm Kyle.</p>
       <p>I have three first names. I'm a twenty-six year old SFSU graduate originally from Laguna Beach...and yes, Kristen and Lauren went to my high school while I was there. I knew you were thinking it.</p>
@@ -43,8 +43,8 @@
       <nav class="my_links">
 	       <a href="https://www.linkedin.com/in/kyleedwardrussell"><b>Linkedin</b></a> |
     	   <a href="https://github.com/zZissou">Github</a> |
-    	   <a href="https://www.facebook.com/zZissou">Facebook</a>
-	    </nav>
+    	   <a href="https://www.facebook.com/zZissou">Facebook</a> 
+      </nav>
     </div>
   </body>
 </html>
