--- a/my-website/html/resume.html
+++ b/my-website/html/resume.html
@@ -10,10 +10,10 @@
     <!-- mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- styles -->
-    <link rel="icon" href="../images/stormtrooper.png">
     <link rel="stylesheet" type="text/css" href="vendor/css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <!-- <link rel="stylesheet" type="text/css" href="assets/css/main.css"> -->
+    <link rel="stylesheet" type="text/css" href="../main.css">
+    <link rel="icon" href="../images/stormtrooper.png">
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <!-- scripts -->
     <script type="text/javascript" src="assets/js/app.js"></script>
@@ -21,19 +21,21 @@
     <link rel="icon" type="image/png" href="assets/imgs/favicon.png">
   </head>
   <body>
-    <h1>Kyle Russell</h1>
-    <nav>
-      <a href="/about_me.html">About Me</a>
-      <a href="/my_work.html">My Work</a>
-      <a href="/resume.html">Resume</a>
-      <a href="/contact_me.html">Contact Me</a>
-    </nav>
-    <div class="section">
+    <div class="header">
+      <h1>Kyle Russell</h1>
+      <nav>
+        <a href="about_me.html">About Me</a>
+        <a href="my_work.html">My Work</a>
+        <a href="resume.html">Resume</a>
+        <a href="contact_me.html">Contact Me</a>
+      </nav>
+    </div>
+    <div class="section resume">
       <h2>Professional Summary</h2>
 
       <h3>Recruiter</h3>
 
-      <h4><a href="https://www.sindeo.com/">Sindeo</a></h4>
+      <h3<a href="https://www.sindeo.com/">Sindeo</a></h3>
 
       <p>San Francisco, CA (November 2014 - Present)</p>
 
@@ -54,7 +56,7 @@
 
       <h3>Recruiting Consultant/Research Associate</h3>
 
-      <h4><a href="https://drjohnsullivan.com/">Dr. John Sullivan and Associates</a></h4>
+      <h3><a href="https://drjohnsullivan.com/">Dr. John Sullivan and Associates</a></h3>
 
       <p>San Francisco, CA (September 2013 - December 2014)</p>
 
@@ -71,7 +73,7 @@
 
       <h3>Project Manager Consultant</h3>
 
-      <h4><a href="http://www.venturechoice.com/">VentureChoice</a></h4>
+      <h3><a href="http://www.venturechoice.com/">VentureChoice</a></h3>
 
       <p>Silicon Valley, CA (March 2014 - August 2014)</p>
 
@@ -93,7 +95,7 @@
 
       <h3>Project Manager Consultant</h3>
 
-      <h4><a href="http://www.warmelin.com/">Warmelin Precision Products</a></h4>
+      <h3><a href="http://www.warmelin.com/">Warmelin Precision Products</a></h3>
 
       <p>Los Angeles, CA (October 2013 - June 2014)</p>
 
