updated future versions section to include level(A-C Grade) of priority.

--- a/my-website/html/index.html
+++ b/my-website/html/index.html
@@ -1,34 +1,148 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Kyle Russell</title>
-  <!-- meta -->
-  <meta charset="utf-8" />
-  <meta name="description" content="Personal Site">
-  <meta name="author" content="GA Student">
-  <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-  <!-- mobile -->
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- styles -->
-  <link rel="icon" href="../images/stormtrooper.png">
-  <link rel="stylesheet" type="text/css" href="main.css">
-  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-  <!-- scripts -->
-  <script type="text/javascript" src="assets/js/app.js"></script>
-  <!-- favicon -->
-  <link rel="icon" type="image/png" href="assets/imgs/favicon.png">
-</head>
-<body>
-  <header>
-    <h1>Kyle Russell</h1>
-  </header>  
-  <nav>
-    <a href="#">About Me</a>
-    <a href="#">My Work</a>
-    <a href="#">Resume</a>
-    <a href="#">Contact Me</a>
-    </nav>
-  </div>
-  <div class="about"
-</body>
+  <head>
+    <title>Kyle Russell</title>
+    <!-- meta -->
+    <meta charset="utf-8" />
+    <meta name="description" content="Personal Site">
+    <meta name="author" content="GA Student">
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <!-- mobile -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- styles -->
+    <link rel="stylesheet" type="text/css" href="vendor/css/normalize.css">
+    <!-- <link rel="stylesheet" type="text/css" href="assets/css/main.css"> -->
+    <link rel="stylesheet" type="text/css" href="../main.css">
+    <link rel="icon" href="../images/stormtrooper.png">
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    <!-- scripts -->
+    <script type="text/javascript" src="assets/js/app.js"></script>
+    <!-- favicon -->
+    <link rel="icon" type="image/png" href="assets/imgs/favicon.png">
+  </head>
+  <body>
+    <div class="header">
+      <h1>Kyle Russell</h1>
+      <nav>
+        <a href="about_me.html">About Me</a>
+        <a href="my_work.html">My Work</a>
+        <a href="resume.html">Resume</a>
+        <a href="contact_me.html">Contact Me</a>
+      </nav>
+    </div>
+    <div class="section about_me">
+      <h2>About Me</h2>
+      <p>Hey, I'm Kyle.</p>
+      <p>I have three first names. I'm a twenty-six year old SFSU graduate originally from Laguna Beach...and yes, Kristen and Lauren went to my high school while I was there. I knew you were thinking it.</p>
+      <p>Nowadays I am a recruiter for a Fintech start-up here in the city and have been with the company since I was brought on immediately post grad.</p>
+      <p>My whole family is from Massachussetts so I've been raised to worship the Patriots and the Red Sox. I follow both teams religiously. #freebrady</p>
+      <p>I've read way too many Star Wars books, own an original VHS box set, and have a Stormtrooper and Boba Fett. Speaking of tattoos, I have another of a coffin I spontaneously got with my girlfriend on a random Friday the 13th from a flash sheet which I paid a whoppin' $13 for.</p>
+      <p>My parents live on a boat, so it's safe to say I enjoy spending any time I have away from the city on the water. I one day want to own my own boat and have the luxury of going out to sail at my leisure and hopefully be able to catch some fresh sushi while doing so!</p>
+    </div>
+    <div class="section my_work">
+      <h2>My Work</h2>
+      <p>This is where all of my future work will be posted</p>
+      <img src="../images/mymasterpiece.jpg">
+    </div>
+    <div class="section resume">
+      <h2>Professional Summary</h2>
+
+      <h3>Recruiter</h3>
+
+      <h3<a href="https://www.sindeo.com/">Sindeo</a></h3>
+
+      <p>San Francisco, CA (November 2014 - Present)</p>
+
+      <h4>Accomplishments</h4>
+      <ul>
+        <li>Full Cycle - Experienced from initial sourcing to interviewing to generating offers.</li>
+        <li>Metrics - Created and developed metrics tools to record data to measure recruiting efficiency.</li>
+        <li>Hiring - Responsible for 150% Year over Year growth.</li>
+        <li>Diverse - Successfully recruited for multiple departments including Tech, Sales, Marketing, Executive, Operations, and Advisory.</li>
+        <li>Candidate Pipelines - Sourced and developed passive prospect pipeline to develop into candidates by leveraging various channels of communication.</li>
+        <li>Sourcing - Proficient in direct sourcing using Boolean searches, LinkedIn, user groups, social media, and other recruiting tools and databases.</li>
+        <li>Communication - Interacted effectively with recruiters, hiring managers, and the CEO to source top talent.</li>
+        <li>Candidate Relationship Management - Managed all prospective candidates and leads in an internal Applicant Tracking System ensuring all communications and actions are logged, information is accurate, and necessary documents are attached.</li>
+        <li>Analytics - Analyzed functions and made recommendations and/or changes when appropriate to increase effectiveness and productivity.</li>
+      </ul>
+
+      <br>
+
+      <h3>Recruiting Consultant/Research Associate</h3>
+
+      <h3><a href="https://drjohnsullivan.com/">Dr. John Sullivan and Associates</a></h3>
+
+      <p>San Francisco, CA (September 2013 - December 2014)</p>
+
+      <h4>Accomplishments</h4>
+      <ul>
+        <li>Created a best practice database - I am working with a team to identify and document leading edge recruiting practices at top firms including Rackspace, Deloitte, Google, Twitter, and VMware.</li>
+        <li>Design a lesson plan - I was able to design and teach an Intro to Recruiting class for Upper Level Management Students. Topics of focus included: The 19 steps in the recruiting process, sourcing passive and active prospects, interviews and assessment, and the 25 habits for becoming an expert.</li>
+        <li>Facebook recruitment project with Dr. John Sullivan that increased revenue by an estimated $100 million annually.</li>
+        <li>Market Research - Led a team of students in developing and conducting surveys and research to develop an extensive industry analysis.</li>
+        <li>Solved a current recruitment problem for Facebook by hiring 75% of targeted candidates.<blockquote><i>&quot;A Modern Remote Recruiting and Market Research Based Approach Designed to Identify and Successfully Recruit the Top 100 CS Graduating Engineers in Asia, with a Special Focus on Women.&quot;</i></blockquote></li>
+      </ul>
+
+      <br>
+
+      <h3>Project Manager Consultant</h3>
+
+      <h3><a href="http://www.venturechoice.com/">VentureChoice</a></h3>
+
+      <p>Silicon Valley, CA (March 2014 - August 2014)</p>
+
+      <h4>Accomplishments</h4>
+
+      <ul>
+        <li>Project Management – Reported directly to the CEO and concurrently managed various projects for engineers to ensure 100% on-time delivery, quality, and performance.</li>
+        <li>Innovation – Created a major feature of the software that improved the product significantly for end user by improving functionality and user friendliness.</li>
+        <li>Full Cycle Recruiting - Saved the company $5,000 by personally sourcing, interviewing, assessing, and providing recommendations for new hires with a 100% acceptance rate.</li>
+        <li>Ambiguity - Completed tasks and assignments with minimal guidance.</li>
+        <li>Marketing – Developed the marketing strategy and sales pitch of a social media website.</li>
+        <li>Onboarding – Successfully integrated engineer into the team which resulted in faster productivity.</li>
+        <li>Technology – Identified and solved UI problems and used Photoshop to provide engineers with design ideas</li>
+        <li>Reports – Wrote reports for the CEO on the status of startups’ progress.</li>
+        <li>Team Management - Managed a team of engineers and tracked their daily effectiveness on their daily activities and goals.</li>
+      </ul>
+
+      <br>
+
+      <h3>Project Manager Consultant</h3>
+
+      <h3><a href="http://www.warmelin.com/">Warmelin Precision Products</a></h3>
+
+      <p>Los Angeles, CA (October 2013 - June 2014)</p>
+
+      <h4>Accomplishments</h4>
+
+      <ul>
+        <li>Team Leader – Led the consulting team that provided solutions to improving the company and was the main contact.</li>
+        <li>Business Analysis – Consulted Warmelin Precision Products on improving team and management efficiency.</li>
+        <li>Extensive Research – Conducted over 100 interviews and surveys to determine underlying issues and inefficient processes like poor training processes, low motivation, and high turnover.</li>
+        <li>Reduced Turnover – Reduced turnover by 30% by developing specific strategies such as 360 feedback, appreciative inquiry, and certificate programs.</li>
+        <li>Advising - 100% of our solutions and implementation strategies were used.</li>
+        <li>Increased employee engagement by 35%.</li>
+      </ul>
+
+      <br>
+
+      <hr>
+
+      <h2>Education</h2>
+
+      <ul>
+        <li>General Assembly:</li>
+        <p>Web Development Immersive- In Progress</p>
+        <li>San Francisco State University:</li>
+        <p>Bachelors of Science: Business Management - 2014</p>
+      </ul>
+    </div>
+    <div class="footer">
+      <nav class="my_links">
+	       <a href="https://www.linkedin.com/in/kyleedwardrussell"><b>Linkedin</b></a> |
+    	   <a href="https://github.com/zZissou">Github</a> |
+    	   <a href="https://www.facebook.com/zZissou">Facebook</a>
+      </nav>
+    </div>
+  </body>
 </html>
