Tried to add fixed navbar js function but not working yet. Added contact section

--- a/my-website/html/index.html
+++ b/my-website/html/index.html
@@ -23,11 +23,11 @@
   <body>
     <div class="header">
       <h1>Kyle Russell</h1>
-      <nav>
-        <a href="about_me.html">About Me</a>
-        <a href="my_work.html">My Work</a>
-        <a href="resume.html">Resume</a>
-        <a href="contact_me.html">Contact Me</a>
+      <nav id="nav_bar">
+        <a href="#">About Me</a>
+        <a href="#">My Work</a>
+        <a href="#">Resume</a>
+        <a href="#">Contact Me</a>
       </nav>
     </div>
     <div class="section about_me">
@@ -137,6 +137,13 @@
         <p>Bachelors of Science: Business Management - 2014</p>
       </ul>
     </div>
+    <div class="section contact">
+      <h2>Contact Information</h2>
+      <p>Number: (949) 632-9906</p>
+      <p>Email: kyle.edward.russell@gmail.com</p>
+      <p>Github: /zZissou</p>
+      <p>LinkedIn: /kyleedwardrussell</p>
+    </div>
     <div class="footer">
       <nav class="my_links">
 	       <a href="https://www.linkedin.com/in/kyleedwardrussell"><b>Linkedin</b></a> |
@@ -144,5 +151,7 @@
     	   <a href="https://www.facebook.com/zZissou">Facebook</a>
       </nav>
     </div>
+    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+
   </body>
 </html>
