--- a/html/index.html
+++ b/html/index.html
@@ -10,12 +10,21 @@
     <!-- mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- styles -->
-    <link rel="stylesheet" type="text/css" href="vendor/css/normalize.css">
-    <!-- <link rel="stylesheet" type="text/css" href="assets/css/main.css"> -->
-    <link rel="stylesheet" type="text/css" href="../main.css">
     <link rel="icon" href="../images/stormtrooper.png">
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-    <!-- scripts -->
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="../main.css">
+
+
+        <!-- scripts -->
     <script type="text/javascript" src="assets/js/app.js"></script>
     <!-- favicon -->
     <link rel="icon" type="image/png" href="assets/imgs/favicon.png">
@@ -23,11 +32,11 @@
   <body>
     <div class="header">
       <h1>Kyle Russell</h1>
-      <nav id="nav_bar">
-        <a href="#">About Me</a>
-        <a href="#">My Work</a>
-        <a href="#">Resume</a>
-        <a href="#">Contact Me</a>
+      <nav class="row" id="nav_bar">
+        <a class="col-md-3 col-md-offset-1" href="#">About Me</a>
+        <a class="col-md-3" href="#">My Work</a>
+        <a class="col-md-3" href="#">Resume</a>
+        <a class="col-md-3" href="#">Contact Me</a>
       </nav>
     </div>
     <div class="section about_me">
@@ -152,6 +161,5 @@
       </nav>
     </div>
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-
   </body>
 </html>
