updated location links for the images and css folders

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- styles -->
-    <link rel="icon" href="../images/stormtrooper.png">
+    <link rel="icon" href="images/stormtrooper.png">
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 
     <!-- Latest compiled and minified CSS -->
@@ -21,7 +21,7 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="../main.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
 
 
         <!-- scripts -->
@@ -51,7 +51,9 @@
     <div class="section my_work">
       <h2>My Work</h2>
       <p>This is where all of my future work will be posted</p>
-      <img src="../images/mymasterpiece.jpg">
+      <a href="https://github.com/zZissou/tic-tac-toe">Tic-Tac-Toe</a>
+      <br>
+      <img src="assets/images/mymasterpiece.jpg">
     </div>
     <div class="section resume">
       <h2>Professional Summary</h2>
