Added links to my WDI assignments.

--- a/index.html
+++ b/index.html
@@ -41,13 +41,20 @@
     </div>
     <div class="section about_me">
       <h2>About Me</h2>
-      <p>Hey, I'm Kyle.</p>
+      <p>Hey, I'm Kyle.</p>ithub
     </div>
     <div class="section my_work">
       <h2>My Work</h2>
       <p>This is where all of my future work will be posted</p>
       <a href="https://github.com/zZissou/tic-tac-toe">Tic-Tac-Toe</a>
-      <br>
+      <a href="https://github.com/zZissou/js-objects-training">JS Objects Training</a>
+      <a href="https://github.com/zZissou/jquery-dom-lab">JQuery Dom Lab</a>
+      <a href="https://github.com/zZissou/functions-exercises">Functions Exercises</a>
+      <a href="https://github.com/zZissou/problem-set-js-basics">JS Basics Problem Set</a>
+      <a href="https://github.com/zZissou/js-control-flow-training">JS Control Flow Training</a>
+      <a href="https://github.com/zZissou/building-js-iterators-lab">Building JS Iterators Lab</a>
+      <a href="https://github.com/zZissou/css-grid-challenges">CSS Grid Challenges</a>
+      <a href="https://github.com/zZissou/giffaw">Giffaw</a>
       <img src="assets/images/mymasterpiece.jpg">
     </div>
     <div class="section resume">
