added racing game to my works page.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <div class="section my_work">
       <h2>My Work</h2>
       <p>This is where all of my future work will be posted</p>
+      <a href="https://github.com/zZissou/Racing_Game">Racing Game</a>
       <a href="https://github.com/zZissou/tic-tac-toe">Tic-Tac-Toe</a>
       <a href="https://github.com/zZissou/js-objects-training">JS Objects Training</a>
       <a href="https://github.com/zZissou/jquery-dom-lab">JQuery Dom Lab</a>
